--- a/dinov2/configs/train/vitb14_research.yaml
+++ b/dinov2/configs/train/vitb14_research.yaml
@@ -5,7 +5,7 @@ ibot:
   separate_head: true
   head_n_prototypes: 131072
 train:
-  batch_size_per_gpu: 32
+  batch_size_per_gpu: 64
   dataset_path: ImageNetCervicalResearch
   centering: sinkhorn_knopp
 student:
@@ -17,8 +17,10 @@ student:
   num_register_tokens: 4
 teacher:
   momentum_teacher: 0.994
+  warmup_teacher_temp_epochs: 25
 optim:
-  epochs: 100
+  epochs: 200
+  warmup_epochs: 20
   base_lr: 2.0e-04  # learning rate for a batch size of 1024
   layerwise_decay: 1.0
 crops:
