--- a/dinov2/configs/train/vitl14_performance.yaml
+++ b/dinov2/configs/train/vitl14_performance.yaml
@@ -6,7 +6,7 @@ ibot:
   head_n_prototypes: 131072
 train:
   batch_size_per_gpu: 32
-  dataset_path: ImageNetCervicalPerformance
+  dataset_path: ImageNetCervicalPerformance:split=TRAIN:root=/projects/skinder@xsede.org/cervix_datasets/example_imagenet/data/root:extra=/projects/skinder@xsede.org/cervix_datasets/example_imagenet/data/extra
   centering: sinkhorn_knopp
 student:
   arch: vit_large
