--- a/dinov2/configs/train/vitl14_performance.yaml
+++ b/dinov2/configs/train/vitl14_performance.yaml
@@ -13,6 +13,7 @@ student:
   patch_size: 14
   drop_path_rate: 0.4
   ffn_layer: swiglufused
+  pretrained_weights: '/scratch/alpine/skinder@xsede.org/cervix_dinov2/outputs/performance/run_1_old/model_0033749.rank_0.pth'
   block_chunks: 4
   num_register_tokens: 4
 teacher:
