--- a/dinov2/configs/train/vitl14_performance.yaml
+++ b/dinov2/configs/train/vitl14_performance.yaml
@@ -13,7 +13,8 @@ student:
   patch_size: 14
   drop_path_rate: 0.4
   ffn_layer: swiglufused
-  pretrained_weights: '/scratch/alpine/skinder@xsede.org/cervix_dinov2/outputs/performance/run_2_old/model_0041249.rank_0.pth'
+  # pretrained_weights: '/scratch/alpine/skinder@xsede.org/cervix_dinov2/outputs/performance/run_2_old/model_0041249.rank_0.pth'
+  pretrained_weights: '/scratch/alpine/skinder@xsede.org/cervix_dinov2/outputs/performance/imagenet/dinov2_vitl14_reg4_pretrain.pth'
   block_chunks: 4
   num_register_tokens: 4
 teacher:
