--- a/dinov2/configs/train/vitl14_performance.yaml
+++ b/dinov2/configs/train/vitl14_performance.yaml
@@ -26,4 +26,5 @@ optim:
   base_lr: 7.0e-04  # learning rate for a batch size of 1024
   layerwise_decay: 1.0
 crops:
+  global_crops_size: 518
   local_crops_size: 98
