--- a/dinov2/configs/train/vitb14_performance.yaml
+++ b/dinov2/configs/train/vitb14_performance.yaml
@@ -1,31 +1,23 @@
-dino:
-  head_n_prototypes: 131072
-  head_bottleneck_dim: 384
 ibot:
   separate_head: true
-  head_n_prototypes: 131072
 train:
-  batch_size_per_gpu: 16
+  batch_size_per_gpu: 64
   dataset_path: ImageNetCervicalPerformance:split=TRAIN:root=/projects/skinder@xsede.org/cervix_datasets/official/performance/data/root:extra=/projects/skinder@xsede.org/cervix_datasets/official/performance/data/extra
   centering: sinkhorn_knopp
 student:
   arch: vit_base
   patch_size: 14
   drop_path_rate: 0.2
-  ffn_layer: mlp
-  # pretrained_weights: '/scratch/alpine/skinder@xsede.org/cervix_dinov2/outputs/performance/run_2_old/model_0041249.rank_0.pth'
-  pretrained_weights: '/scratch/alpine/skinder@xsede.org/cervix_dinov2/outputs/performance/imagenet/dinov2_vitb14_reg4_pretrain.pth'
-  block_chunks: 0
-  layerscale: 1.0
+  ffn_layer: swiglufused
+  block_chunks: 4
   num_register_tokens: 4
 teacher:
   momentum_teacher: 0.994
-  warmup_teacher_temp_epochs: 25
+  warmup_teacher_temp_epochs: 10
 optim:
   epochs: 100
-  warmup_epochs: 20
-  base_lr: 5.0e-02  # learning rate for a batch size of 1024
+  warmup_epochs: 5
+  base_lr: 5.0e-03  # learning rate for a batch size of 1024
   layerwise_decay: 1.0
 crops:
-  global_crops_size: 518
   local_crops_size: 98
