--- a/dinov2/configs/train/vitl14_performance.yaml
+++ b/dinov2/configs/train/vitl14_performance.yaml
@@ -1,9 +1,5 @@
-dino:
-  head_n_prototypes: 131072
-  head_bottleneck_dim: 384
 ibot:
   separate_head: true
-  head_n_prototypes: 131072
 train:
   batch_size_per_gpu: 32
   dataset_path: ImageNetCervicalPerformance:split=TRAIN:root=/projects/skinder@xsede.org/cervix_datasets/official/performance/data/root:extra=/projects/skinder@xsede.org/cervix_datasets/official/performance/data/extra
@@ -21,8 +17,8 @@ teacher:
 optim:
   epochs: 100
   warmup_epochs: 10
-  base_lr: 5.0e-03  # learning rate for a batch size of 1024
+  base_lr: 0.001  # learning rate for a batch size of 1024
   layerwise_decay: 1.0
-  freeze_last_layer_epochs: 3
+  freeze_last_layer_epochs: 7
 crops:
   local_crops_size: 98
