--- a/dinov2/configs/train/vitb14_performance_freeze.yaml
+++ b/dinov2/configs/train/vitb14_performance_freeze.yaml
@@ -1,27 +1,24 @@
 ibot:
   separate_head: true
 train:
-  batch_size_per_gpu: 16
+  batch_size_per_gpu: 64
   dataset_path: ImageNetCervicalPerformance:split=TRAIN:root=/projects/skinder@xsede.org/cervix_datasets/official/performance/data/root:extra=/projects/skinder@xsede.org/cervix_datasets/official/performance/data/extra
   centering: "centering"
 student:
   arch: vit_base
   patch_size: 14
   drop_path_rate: 0.2
-  ffn_layer: mlp
-  pretrained_weights: '/scratch/alpine/skinder@xsede.org/cervix_dinov2/outputs/performance/imagenet/dinov2_vitb14_reg4_pretrain.pth'
-  block_chunks: 0
-  layerscale: 1.0
+  ffn_layer: swiglufused
+  block_chunks: 4
   num_register_tokens: 4
 teacher:
   momentum_teacher: 0.994
   warmup_teacher_temp_epochs: 20
 optim:
-  epochs: 100
+  epochs: 150
   warmup_epochs: 10
-  base_lr: 4.0e-04  # learning rate for a batch size of 1024
+  base_lr: 0.004  # learning rate for a batch size of 1024
   layerwise_decay: 1.0
-  freeze_last_layer_epochs: 3
+  freeze_last_layer_epochs: 150
 crops:
-  global_crops_size: 518
   local_crops_size: 98
